--- a/less/overrides.less
+++ b/less/overrides.less
@@ -895,11 +895,6 @@ article {
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
-
-}
-
-/* Medium Devices, Desktops */
-@media only screen and (max-width : 992px) {
     .navbar-header {
         float: none;
     }
@@ -936,6 +931,11 @@ article {
     }
 }
 
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+    
+}
+
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
     .panel-pane.pane-page-content {
@@ -969,7 +969,7 @@ article {
 
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
-    span.btn.btn-info {
+    .lead span.btn.btn-info {
         margin-top: 1em;
     }
     .views-field.views-field-field-dato {
